tests/error/comptime/pointer_difference05.bz
// error: invalid pointer difference operation with type '*int32'
// note: while evaluating expression at compile time
// note: lhs and rhs addresses point to different memory segments
// note: lhs address points to this stack object
// note: rhs address points to an object in this allocation
// note: allocation was made while evaluating expression at compile time
// error: failed to evaluate expression at compile time
function test()
{
	(consteval {
		let i = 0;
		let p = __builtin_comptime_malloc(int32, 1);
		defer __builtin_comptime_free(p);
		__builtin_inplace_construct(p, 0);

		&i - p;
	});
}
